@@ -9,10 +9,6 @@
 # will be included (by importing) in this file if found.
 
 from Products.CMFCore.permissions import setDefaultRoles
-
-<dtml-if "[cn for cn in generator.getGeneratedClasses(package) if cn.hasStereoType(generator.cmfmember_stereotype)]">
-from Products.CMFMember.MemberPermissions import ADD_MEMBER_PERMISSION
-</dtml-if>
 <dtml-if "[cn for cn in generator.getGeneratedClasses(package) if cn.hasStereoType(generator.remember_stereotype)]">
 from Products.remember.permissions import ADD_MEMBER_PERMISSION
 </dtml-if>
