@@ -1,3 +1,4 @@
+
 2007-09-05 Jens Klein <jens@bluedynamics.com> and 
            Robert Niederreiter <robertnqbluedynamics.com>
 
@@ -7,6 +8,9 @@
 	configureable. see documentation of tgv skin_registration and 
 	skin_directories.
 	* change the type registration: use a GS-profile.
+	* removed all references to CMFMember, it will no longer work with 
+	Plone >=2.5
+	* marked some parts for the portlet-support as outdated. 
 
 2007-08-20  Maurits van Rees  <maurits@vanrees.org>
 
